fixed some intellij linter warnings